--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.application.name=GisAmtApplication
 spring.h2.console.enabled=true
 logging.level.org.hibernate.SQL=debug
 spring.datasource.url=jdbc:h2:mem:uiak
+spring.cloud.zookeeper.connectString: localhost:2181
